add oath google and github

--- a/.env
+++ b/.env
@@ -7,3 +7,9 @@
 DATABASE_URL="mongodb+srv://Aezo27:NUTleuQHwc2dWadY@cluster0.wmmwli5.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
+
+GITHUB_ID=55fc38911694b0e189a8
+GITHUB_SECRET=13df84369623b5b95d9cdc0001457de06b6ba5a0
+
+GOOGLE_CLIENT_ID=233430910657-o3omuhiq26kb861r36jtg969edfj924a.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
